Started styling, added file for landing page.

--- a/src/styles/AppWrapper.scss
+++ b/src/styles/AppWrapper.scss
@@ -5,7 +5,7 @@ $header-height: 8vh;
 // AppWrapper
 //=======================================
 #app-wrapper {
-  background-color: #cef3b7;
+  background-color: #add4e9;
   margin: $header-height 0 $header-height 0;
   min-height: calc(100vh - 2 * #{$header-height});
 }
