--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,3 +11,28 @@ body {
   margin: 0;
   text-align: center;
 }
+
+.link_button {
+  background-color: #f5f5f5;
+  border: 1px solid #e5e5e5;
+  border-radius: 15px;
+  color: #333;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.42857;
+  margin: 0;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 0.2s ease-in-out;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.link_button:hover {
+  background-color: #28B2FF;
+  border-color: #ccc;
+  color: #FFFFFF;
+}
