--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,7 +12,7 @@ body {
   text-align: center;
 }
 
-.link_button {
+.link-button {
   background-color: #f5f5f5;
   border: 1px solid #e5e5e5;
   border-radius: 15px;
@@ -31,8 +31,8 @@ body {
   white-space: nowrap;
 }
 
-.link_button:hover {
-  background-color: #28B2FF;
+.link-button:hover {
+  background-color: #28b2ff;
   border-color: #ccc;
-  color: #FFFFFF;
+  color: #fff;
 }
