--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,26 +13,21 @@ body {
 }
 
 .link-button {
-  background-color: #f5f5f5;
-  border: 1px solid #e5e5e5;
+  width: 10%;
+  height: auto;
+  padding: 0.5%;
+  margin: 1%;
+  background-color: #fff;
   border-radius: 15px;
   color: #333;
   cursor: pointer;
-  display: inline-block;
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 1.42857;
-  margin: 0;
-  padding: 10px 20px;
+  font-size: 1.5rem;
   text-align: center;
   text-decoration: none;
   transition: all 0.2s ease-in-out;
-  vertical-align: middle;
-  white-space: nowrap;
 }
 
 .link-button:hover {
   background-color: #28b2ff;
-  border-color: #ccc;
   color: #fff;
 }
